// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`muon linux 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`muon mac 1`] = `
Object {
  "mac": Array [],
}
`;

exports[`muon win 1`] = `
Object {
  "win": Array [],
}
`;
